# iceflow

./: .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  .linter-suppressions  CMakeLists.txt  Dockerfile  Doxyfile  IceFlow.cbp  Install.md  NOTICE  README.md  dag-syntax.cddl  flake.nix
.cmake/api/v1/reply/: cache-v2-3bd4817b58166a4accc2.json  cache-v2-504204eabc24f6157fc6.json  cmakeFiles-v1-4fc2fa4463d1c37a8396.json  cmakeFiles-v1-594bca1de23b0476406f.json  codemodel-v2-23d91ca11d1c3c25a6b6.json  codemodel-v2-a64857f6e6e489f8533a.json  directory-.-Debug-1361783e574ff1a8f372.json  directory-.-Debug-8105667a1f3162173941.json  directory-include-Debug-727dc8f15ca9a988afcb.json  directory-include-Debug-dbae3563b65eeab32c9a.json  index-2023-08-21T11-42-34-0547.json  index-2023-09-04T10-52-38-0850.json  target-agedetection-Debug-d119f303925077a4a5da.json  target-aggregate-Debug-c02243106388de999728.json  target-check-format-Debug-3442a11a46997cd110d0.json  target-check-format-Debug-ac4c14e4ce40bc11ce67.json  target-docs-Debug-f9a0ecf6f77644301bc4.json  target-facedetection-Debug-e915f1125720d63d35a4.json  target-format-Debug-a94c1cb9bd565c7ae972.json  target-format-Debug-ef8a61e200c0315db133.json  target-genderdetection-Debug-96c98fee4c640764b11e.json  target-imagesource-Debug-907dd5f2f0d26cbed0f0.json  target-lint-Debug-49dfefdbc94f6baa8479.json  target-lint-Debug-f4061d3e3470b4e8836d.json  target-peoplecounter-Debug-8494d5dfd3a23112f248.json  toolchains-v1-f40be1ad08c7c4b41e88.json
.github/workflows/: build-docker-images.yml  build.yml  docker-image.yml  doxygen-gh-pages.yml
ansible-scripts/: dependencySolver.yaml  picluster.ini
apps/: CMakeLists.txt
apps/AgeDetection/: .gitignore  agedetection.cpp
apps/Aggregate/: .gitignore  aggregate.cpp
apps/FaceDetection/: .gitignore  facedetection.cpp
apps/GenderDetection/: .gitignore  genderdetection.cpp
apps/ImageSource/: .gitignore  imagesource.cpp
apps/JsonSampleApp/: functionA.cpp  functionA_config.yaml  functionB.cpp  functionB_config.yaml
apps/PeopleCounter/: peoplecounter.cpp
apps/VisionProcessing/AgeDetection/: .gitignore  config.yaml  start.sh
apps/VisionProcessing/Aggregate/: config.yaml
apps/VisionProcessing/FaceDetection/: config.yaml  facedetection.cpp
apps/VisionProcessing/GenderDetection/: .gitignore  config.yaml  genderdetection.cpp
apps/VisionProcessing/ImageSource/: .gitignore
apps/VisionProcessing/PeopleCounter/: .gitignore  config.yaml
apps/include/: util.hpp
apps/util/: util.cpp
apps/wordCount/: .gitignore  README.md  lines2words1.cpp  lines2words1.yaml  lines2words2.cpp  lines2words2.yaml  text2lines.cpp  text2lines.yaml  wordcount.cpp  wordcount.yaml
apps/wordCount/lines2words/: lines2words.cpp  lines2words2.yaml
apps/wordCount/lines2words1/: lines2words1.cpp  lines2words1.yaml  start.sh
apps/wordCount/lines2words2/: lines2words2.cpp  lines2words2.yaml  start.sh
apps/wordCount/text2lines/: sourcetext.txt  start.sh  text2lines.cpp  text2lines.yaml
apps/wordCount/wordcount/: start.sh  wordcount.cpp  wordcount.yaml
cmake/: docs.cmake  format.cmake  formatting.cmake  iceflow-config.cmake  lint.cmake  sources.cmake
doc/: Nix-Developer-Guide.md
examples/: CMakeLists.txt
examples/visionProcessing/: application-dag.json
examples/visionProcessing/ageDetection/: ageDetection.cpp  ageDetection.yaml  run.sh
examples/visionProcessing/aggregate/: aggregate.cpp  aggregate.yaml  run.sh
examples/visionProcessing/faceDetection/: faceDetection.cpp  faceDetection.yaml  run.sh
examples/visionProcessing/genderDetection/: genderDetection.cpp  genderDetection.yaml  run.sh
examples/visionProcessing/imageSource/: imageSource.cpp  imageSource.yaml  run.sh
examples/visionProcessing/peopleCount/: peopleCount.cpp  peopleCount.yaml  run.sh
examples/wordCount/: application-DAG.json  application-DAG.yml  application-dag.json
examples/wordCount/lines2words/: lines2words.cpp  lines2words1.yaml  lines2words2.yaml  start_lines2words1.sh  start_lines2words2.sh
examples/wordCount/text2lines/: sourcetext.txt  start.sh  text2lines.cpp  text2lines.yaml
examples/wordCount/wordcount/: start.sh  wordcount.cpp  wordcount.yaml
include/: CMakeLists.txt
include/iceflow/: Consumer.hpp  IceFlowPubBase.hpp  IceFlowPubSubBase.hpp  IceFlowSubBase.hpp  Producer.hpp  block.hpp  congestion-reporter.hpp  constants.hpp  consumer-tlv.hpp  consumer.hpp  content-type-value.hpp  contentType.hpp  dag-parser.hpp  dagParser.hpp  data-store.hpp  data.hpp  executor.hpp  iceflow.hpp  iceflowBase.hpp  measurements.hpp  node-executor-service.hpp  node-instance-service.hpp  producer-tlv.hpp  producer.hpp  ringbuffer.hpp  scaler.hpp  serde.hpp  stats.hpp  typed-data.hpp
pkg/: iceflow-config.cmake.in
proto/: iceflow.proto  node-executor.proto  node-instance.proto
proto/iceflow/: node-instance.proto
src/: consumer.cpp  dag-Parser.cpp  dag-parser.cpp  dagParser.cpp  executor.cpp  iceflow.cpp  measurements.cpp  node-instance-service.cpp  producer.cpp  scaler.cpp  serde.cpp
src/AgeDetection/: .gitignore  agedetection.cpp
src/Aggregate/: aggregate.cpp
src/FaceDetection/: .gitignore  facedetection.cpp
src/GenderDetection/: .gitignore  genderdetection.cpp
src/ImageSource/: config.yaml  imagesource.cpp
src/PeopleCounter/: config.yaml  peoplecounter.cpp
src/core/: block.hpp  consumer-tlv.hpp  data.hpp  logger.hpp  measurements.hpp  ringbuffer.hpp  typed-data.hpp
src/services/: node-executor-service.cpp  node-instance-service.cpp
tests/: CMakeLists.txt  iceflow_test.cpp
